# C-Learning

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  Building_2index_8md.html  CMakeLists.txt  Common_8h.html  Common_8h_source.html  Doxyfile  Doxyfile.bak  License.txt  Logfile.txt  README.md  Testing_2index_8md.html  building.html  compile.bash  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_1536f20341635eb759440a7045eb0dda.html  dir_326cfef2590dc603900f438a2dc715be.html  dir_326cfef2590dc603900f438a2dc715be.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_687c8104497be78f2db4915d6a98df1f.html  dir_88651f248e43b6be3b6664a65e088fa2.html  dir_88651f248e43b6be3b6664a65e088fa2.js  dir_e90541917dd8f6462fc9e97cb284e49d.html  dir_e90541917dd8f6462fc9e97cb284e49d.js  dir_ea8e4a5202509cef3814de5e9fd16360.html  files.html  files_dup.js  globals.html  globals_func.html  hello2  help  imp_shortcuts.txt  index.html  (+39 more)
.cache/clangd/index/: Common.h.62D2A063174AB042.idx  CsvFormatter.h.F819559F1087DF7B.idx  IAppender.h.5C1CA6D6EFA0C72C.idx  Init.h.96E57DFCB2F769FD.idx  Log.h.F8782D937619C990.idx  Logger.h.9C970222F09A7423.idx  NativeEOLConverter.h.F45E5CB6BC290513.idx  Record.h.26F3D36D0E2EACA5.idx  RollingFileAppender.h.EBA75D6842182F8A.idx  RollingFileInitializer.h.D3940BD0F44731D0.idx  Severity.h.E3227485EAB0D2BC.idx  TxtFormatter.h.9895DF4D9BCF8C4D.idx  UTF8Converter.h.7B18F4972B6BD21A.idx  Util.h.C5C4226AB2973DAA.idx  main.cpp.FB5D05AAEC7048D4.idx  main_Calculator.cpp.D8C86A8DC7FF3F7C.idx  main_Calculator.h.6BE1BCB43C24380A.idx  main_Hello.cpp.B67FC1B90989B6FE.idx  main_Hello.h.D11468F53F6E9348.idx  main_LanguageStandardCheck.cpp.108BD328C43B77A5.idx  main_LanguageStandardCheck.h.EF03E2775C1CB629.idx  main_functions.cpp.48C0F2D2B7BF1BFF.idx  main_functions.h.319CAF98E1D1B1E5.idx
.github/: release-drafter.yml
.github/workflows/: build_release.yml  build_self-hosted.yml  documentation.yml
Calculator/: mainCalc.cpp  main_Calculator.cpp
Hello Program/: hello  hello2
Hello_Program/: hello  hello2  mainHello.cpp  main_Hello.cpp
Language Standard Check/: check
Language_Standard_Check/: main_LanguageStandardCheck.cpp
Programs/: main_Calculator.cpp
Test/: test  test.cpp
includes/: Common.h  mainCalc.h  mainHello.h  main_Calculator.h  main_Functions.h  main_Hello.h  main_LanguageStandardCheck.h  main_functions.h  test.h  trans_includes.h
mannual/: index.md
mannual/Building/: index.md
manual/: index.md
manual/Building/: index.md
manual/Testing/: index.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt  main.cpp  main_functions.cpp
src/Programs/: main_Calculator.cpp  main_Hello.cpp  main_LanguageStandardCheck.cpp
src/includes/: Common.h  main_functions.h
src/libs/: CMakeLists.txt  lib_Calculator.cpp  lib_Hello.cpp  lib_LanguageStandardCheck.cpp
src/libs/includes/: lib_Calculator.h  lib_Hello.h  lib_LanguageStandardCheck.h
tutorial_files/: 1.4 variable_initilazation.cpp  2.10  Introduction to the preprocessor  2.7 Forward declarations and definitions  3.2 The debugging process  4.5 Unsigned integers, and why to avoid them  4.6 Fixed width integer and size_t  4.7 Introduction to scientific notation  4.8 Floating point numbers  Linux_File_System.md  imp_shortcuts.txt
