#set req
cmake_minimum_required(VERSION 3.10)

#Intro
project(C-Learning VERSION 1.0 DESCRIPTION "Simple C++ Learning Porject" LANGUAGES CXX)

#self libs
add_subdirectory(src)

#binary output
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})

#for clangd compilation database
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")


set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

#for installing:
include(InstallRequiredSystemLibraries)

set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR/License.txt})
set(CPACK_PACKAGE_VERSION_MAJOR "${main_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${main_VERSION_MINOR}")
set(CPACK_GENERATOR "TGZ")
set(CPACK_SOURCE_GENERATOR "TGZ")
include(CPack)
